orm/shelldojo.txt

>>> from dojoninjaApp.models import Dojo,Ninja
>>> Dojo.objects.all()
<QuerySet []>
>>> Dojo.objects.create(name="dojo1",city="jenin",state="pa")
<Dojo: <Dojo object: dojo1jenin (1)>>
>>> Dojo.objects.create(name="dojo2",city="nablus",state="pa")
<Dojo: <Dojo object: dojo2nablus (2)>>
>>> Dojo.objects.create(name="dojo3",city="ramallah",state="pa")
<Dojo: <Dojo object: dojo3ramallah (3)>>
>>> Dojo.objects.delete
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Manager' object has no attribute 'delete'
>>> Dojo.objects.get()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\Users\user\Desktop\python_stack\my_environments\djangoPy3Env\lib\site-packages\django\db\models\manager.py", line 82, in manager_method
    return getattr(self.get_queryset(), name)(*args, **kwargs)
  File "C:\Users\user\Desktop\python_stack\my_environments\djangoPy3Env\lib\site-packages\django\db\models\query.py", line 410, in get
    raise self.model.MultipleObjectsReturned(
dojoninjaApp.models.Dojo.MultipleObjectsReturned: get() returned more than one Dojo -- it returned 3!
>>> Dojo.objects.all()
<QuerySet [<Dojo: <Dojo object: dojo1jenin (1)>>, <Dojo: <Dojo object: dojo2nablus (2)>>, <Dojo: <Dojo object: dojo3ramallah (3)>>]>
>>> Dojo.objects.all().delete()
(3, {'dojoninjaApp.Ninja': 0, 'dojoninjaApp.Dojo': 3})
>>> Dojo.objects.all()
<QuerySet []>
>>> Dojo.objects.create(name="dojo1",city="jenin",state="pa")
<Dojo: <Dojo object: dojo1jenin (4)>>
>>> Dojo.objects.create(name="dojo2",city="nablus",state="pa")
<Dojo: <Dojo object: dojo2nablus (5)>>
>>> Dojo.objects.create(name="dojo3",city="ramallah",state="pa")
<Dojo: <Dojo object: dojo3ramallah (6)>>
>>> Dojo.objects.all()
<QuerySet [<Dojo: <Dojo object: dojo1jenin (4)>>, <Dojo: <Dojo object: dojo2nablus (5)>>, <Dojo: <Dojo object: dojo3ramallah (6)>>]>
>>> Ninja.objects.create(first_name="ninja",last_name="one",dojo=Dojo.objects.get(id=4))
<Ninja: <Ninja object: ninjaone (1)>>
>>> Ninja.objects.create(first_name="ninja",last_name="two",dojo=Dojo.objects.get(id=4))
<Ninja: <Ninja object: ninjatwo (2)>>
>>> Ninja.objects.create(first_name="ninja",last_name="three",dojo=Dojo.objects.get(id=4))
<Ninja: <Ninja object: ninjathree (3)>>
>>> Ninja.objects.create(first_name="ninja",last_name="four",dojo=Dojo.objects.get(id=5))
<Ninja: <Ninja object: ninjafour (4)>>
>>> Ninja.objects.create(first_name="ninja",last_name="five",dojo=Dojo.objects.get(id=5))
<Ninja: <Ninja object: ninjafive (5)>>
>>> Ninja.objects.create(first_name="ninja",last_name="six",dojo=Dojo.objects.get(id=5))
<Ninja: <Ninja object: ninjasix (6)>>
>>> Ninja.objects.create(first_name="ninja",last_name="seven",dojo=Dojo.objects.get(id=6))
<Ninja: <Ninja object: ninjaseven (7)>>
>>> Ninja.objects.create(first_name="ninja",last_name="eight",dojo=Dojo.objects.get(id=6))
<Ninja: <Ninja object: ninjaeight (8)>>
>>> Ninja.objects.create(first_name="ninja",last_name="nine",dojo=Dojo.objects.get(id=6))
<Ninja: <Ninja object: ninjanine (9)>>
>>>
>>>
>>> ninjas = Ninja.objects.filter(dojo=Dojo.objects.get(id=4))
>>> ninjas
<QuerySet [<Ninja: <Ninja object: ninjaone (1)>>, <Ninja: <Ninja object: ninjatwo (2)>>, <Ninja: <Ninja object: ninjathree (3)>>]>
>>> ninjas = Ninja.objects.filter(dojo=Dojo.objects.last))
  File "<console>", line 1
    ninjas = Ninja.objects.filter(dojo=Dojo.objects.last))
                                                         ^
SyntaxError: unmatched ')'
>>> ninjas = Ninja.objects.filter(dojo=Dojo.objects.last())
>>> ninjas
<QuerySet [<Ninja: <Ninja object: ninjaseven (7)>>, <Ninja: <Ninja object: ninjaeight (8)>>, <Ninja: <Ninja object: ninjanine (9)>>]>
>>> ninjas = Ninja.objects.last()
>>> ninjas
<Ninja: <Ninja object: ninjanine (9)>>
>>> ninja = Ninja.objects.last()
>>> ninja = Ninja.objects.last().dojos
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Ninja' object has no attribute 'dojos'
>>> ninja = Ninja.objects.last().dojo
>>> ninjadojo = Ninja.objects.last().dojo
>>> ninjadojo
<Dojo: <Dojo object: dojo3ramallah (6)>>

>>> Dojo.objects.create(name="newdojo",city="hebron",desc="new ",state="pa")
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'Dojo' is not defined
>>> from dojoninjaApp.models import Dojo,Ninja
>>> Dojo.objects.create(name="newdojo",city="hebron",desc="new ",state="pa")
<Dojo: <Dojo object: newdojohebron (7)>>
>>>
